Settings to beta & beta update

--- a/OpenCase/RUS/settings.html
+++ b/OpenCase/RUS/settings.html
@@ -455,6 +455,12 @@ $(document).on('click', '#code-confirm', function() {
     multiply: true,
     action: 'location="http://192.168.1.205:8080"',
     description: 'Go to local web server.'
+    }, {
+        simpleCode: 'Beta',
+        code: '',
+        multiply: true,
+        action: 'location="https://vlados776.github.io/OpenCase_Beta/RUS/cases.html"',
+        description: 'Redirect to beta server.'
   }
 	];
 	var code = $('#code-input').val();
