--- a/OpenCase_Beta/RUS/rulet.html
+++ b/OpenCase_Beta/RUS/rulet.html
@@ -17,6 +17,7 @@
 <script src="../scripts/settings.js"></script>
 <script src="../scripts/cases2.js"></script>
 <script src="../scripts/skinNames.js"></script>
+<script src="../scripts/weapons.js"></script>
 <script src="../scripts/quality.js"></script>
 <script src="../scripts/prices.js"></script>
 <script src="../scripts/jackpotBots.js"></script>
