Beta update & snow in chat

--- a/OpenCase_Beta/RUS/RPS.html
+++ b/OpenCase_Beta/RUS/RPS.html
@@ -8,11 +8,13 @@
 <link rel="stylesheet" type="text/css" href="../css/rarity.css">
 <link rel="stylesheet" type="text/css" href="../css/rps.css">
 <link rel="stylesheet" type="text/css" href="../css/loading.css">
+    <link rel="stylesheet" type="text/css" href="../css/inventory-portable.css">
 
 <script src="../scripts/build/libs.js"></script>
 <script src="../scripts/main.js"></script>
 <script src="../scripts/settings.js"></script>
 <script src="../scripts/skinNames.js"></script>
+<script src="../scripts/weapons.js"></script>
 <script src="../scripts/cases2.js"></script>
 <script src="../scripts/quality.js"></script>
 <script src="../scripts/prices.js"></script>
