--- a/OpenCase_Beta/RUS/open.html
+++ b/OpenCase_Beta/RUS/open.html
@@ -18,11 +18,10 @@
 <link rel="stylesheet" type="text/css" href="../css/rarity.css">
 <link rel="stylesheet" type="text/css" href="../css/fonts.css">
 <link rel="stylesheet" type="text/css" href="../css/buttons.css">
-<link rel="stylesheet" type="text/css" href="../css/winter.css">
 <link rel="stylesheet" href="../css/lobibox.min.css" />
 </head>
 <body data-localization="openCase" data-inventory="no-load">
-<div class="snow"></div>
+
 <div class="weapons">
 <div class="closeCase"></div>
 
@@ -44,16 +43,12 @@
 <img src="" class="win_img">
 <div class="win_sell_div">
 	<h3 id="win_sell_text" class="lines"><span>Продать</span></h3>
-	<div class="corner_holder">
-		<button class="button_glass with_icon double_icon" id="double_sell_button"></button>
-		<span class="corner_left"></span>
-		<span class="corner_right"></span>
-	</div>
+    <button class="button_glass" id="double_sell_button"></button>
 </div>
 </div>
 
 <button class="openCase">Открыть кейс</button>
-<button class="rand">Random Weapon</button>
+<!--<button class="rand">Random Weapon</button>-->
 
 <div><span id="opened-text">Открыто: </span><span id="opened">0</span></div>
 
