--- a/OpenCase_Beta/RUS/rulet.html
+++ b/OpenCase_Beta/RUS/rulet.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" type="text/css" href="../css/fonts.css">
 <link rel="stylesheet" type="text/css" href="../css/loading.css">
 <link rel="stylesheet" type="text/css" href="../css/animate.css">
+<link rel="stylesheet" type="text/css" href="../css/inventory-portable.css">
 
 <!-- Скрипты -->
 <script src="../scripts/build/libs.js"></script>
