--- a/OpenCase_Beta/RUS/chat.html
+++ b/OpenCase_Beta/RUS/chat.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="../css/lobibox.min.css"/>
     <link rel="stylesheet" href="../css/navigationMenu.css">
+    <link rel="stylesheet" href="../css/winter.css">
     
     <script src="../scripts/build/libs.js"></script>
     <script src="../scripts/main.js"></script>
