[Beta] Snow update

--- a/OpenCase_Beta/RUS/chat.html
+++ b/OpenCase_Beta/RUS/chat.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="../css/winter.css">
     
     <script src="../scripts/build/libs.js"></script>
+    <script src="../scripts/winter.js"></script>
     <script src="../scripts/main.js"></script>
     <script src="../scripts/navigationMenu.js"></script>
     <script src="../scripts/profile.js"></script>
