--- a/OpenCase_Beta/RUS/about.html
+++ b/OpenCase_Beta/RUS/about.html
@@ -15,6 +15,7 @@
     <script src="../scripts/localization.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/fonts.css">
     <link rel="stylesheet" type="text/css" href="../css/main.css">
+    <link rel="stylesheet" type="text/css" href="../css/winter.css">
     <title>О программе</title>
 </head>
 
