--- a/OpenCase_Beta/RUS/banlist.html
+++ b/OpenCase_Beta/RUS/banlist.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="../css/buttons.css">
     <link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/lobibox.min.css" />
+    <link rel="stylesheet" type="text/css" href="../css/winter.css">
     <script src="../scripts/build/libs.js"></script>
     <script src="../scripts/main.js"></script>
     <script src="../scripts/fb-inventory.js"></script>
