--- a/OpenCase_Beta/RUS/inventory.html
+++ b/OpenCase_Beta/RUS/inventory.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/loading.css">
 	<link rel="stylesheet" type="text/css" href="../css/buttons.css">
 	<link rel="stylesheet" href="../css/lobibox.min.css" />
+    <link rel="stylesheet" type="text/css" href="../css/winter.css">
 
 	<script src="../scripts/build/libs.js"></script>
 	<script src="../scripts/main.js"></script>
