--- a/OpenCase_Beta/RUS/open.html
+++ b/OpenCase_Beta/RUS/open.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" type="text/css" href="../css/fonts.css">
 <link rel="stylesheet" type="text/css" href="../css/buttons.css">
 <link rel="stylesheet" href="../css/lobibox.min.css" />
+<link rel="stylesheet" type="text/css" href="../css/winter.css">
 </head>
 <body data-localization="openCase" data-inventory="no-load">
 
