--- a/OpenCase_Beta/RUS/statistic.html
+++ b/OpenCase_Beta/RUS/statistic.html
@@ -17,6 +17,7 @@
 
 <link rel="stylesheet" type="text/css" href="../css/fonts.css">
 <link rel="stylesheet" type="text/css" href="../css/main.css">
+<link rel="stylesheet" type="text/css" href="../css/winter.css">
 </head>
 <style>
 body {
