--- a/OpenCase_Beta/RUS/cases.html
+++ b/OpenCase_Beta/RUS/cases.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" type="text/css" href="../css/fonts.css">
 <link rel="stylesheet" type="text/css" href="../css/animate.css">
 <link rel="stylesheet" href="../css/lobibox.min.css"/>
+<link rel="stylesheet" type="text/css" href="../css/winter.css">
 
 <script src="../scripts/build/libs.js"></script>
 <script src="../scripts/main.js"></script>
@@ -23,7 +24,7 @@
 </head>
 <body data-localization="cases" data-inventory="no-load">
 	<div class="site-overlay"></div>
-	<div id="container">
+	<div id="container" class="sosulki" style="background-position: 0 39px;">
 <div class="navigationBar" data-menu-EN="Open Cases" data-menu-RU="Открыть кейсы"></div>
 
 <div class="popup" id="special-popup">
