--- a/OpenCase_Beta/RUS/crash-Online.html
+++ b/OpenCase_Beta/RUS/crash-Online.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="../css/crash.css">
     <link rel="stylesheet" type="text/css" href="../css/odometer-theme-default.css">
     <link rel="stylesheet" type="text/css" href="../css/online-games.css">
+    <link rel="stylesheet" type="text/css" href="../css/winter.css">
     <!-- Скрипты -->
     <script src="../scripts/build/libs.js"></script>
     <script src="../scripts/main.js"></script>
