--- a/OpenCase_Beta/RUS/double-Online.html
+++ b/OpenCase_Beta/RUS/double-Online.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" type="text/css" href="../css/loading.css">
 <link rel="stylesheet" type="text/css" href="../css/buttons.css">
 <link rel="stylesheet" type="text/css" href="../css/online-games.css">
-
+<link rel="stylesheet" type="text/css" href="../css/winter.css">
 
 <!-- Скрипты -->
 <script src="../scripts/build/libs.js"></script>
