--- a/OpenCase_Beta/RUS/news.html
+++ b/OpenCase_Beta/RUS/news.html
@@ -16,6 +16,7 @@
 
 		<link rel="stylesheet" type="text/css" href="../css/fonts.css" />
 		<link rel="stylesheet" type="text/css" href="../css/main.css" />
+        <link rel="stylesheet" type="text/css" href="../css/winter.css">
 	</head>
 	<style>
 		body {
