--- a/OpenCase_Beta/RUS/rulet.html
+++ b/OpenCase_Beta/RUS/rulet.html
@@ -11,7 +11,8 @@
 <link rel="stylesheet" type="text/css" href="../css/loading.css">
 <link rel="stylesheet" type="text/css" href="../css/animate.css">
 <link rel="stylesheet" type="text/css" href="../css/inventory-portable.css">
-
+<link rel="stylesheet" type="text/css" href="../css/winter.css">
+    
 <!-- Скрипты -->
 <script src="../scripts/build/libs.js"></script>
 <script src="../scripts/main.js"></script>
