--- a/OpenCase_Beta/RUS/settings.html
+++ b/OpenCase_Beta/RUS/settings.html
@@ -9,7 +9,8 @@
 <link rel="stylesheet" type="text/css" href="../css/animate.css">
 <link rel="stylesheet" type="text/css" href="../css/lobibox.min.css"/>
 <link rel="stylesheet" type="text/css" href="../css/iconselect/iconselect.css">
-
+<link rel="stylesheet" type="text/css" href="../css/winter.css">
+    
 <script src="../scripts/build/libs.js"></script>
 <script src="../scripts/main.js"></script>
 <script src="../scripts/settings.js"></script>
