--- a/OpenCase/RUS/about.html
+++ b/OpenCase/RUS/about.html
@@ -11,6 +11,7 @@
     <script src="../scripts/localization.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/fonts.css">
     <link rel="stylesheet" type="text/css" href="../css/main.css">
+    <link rel="stylesheet" type="text/css" href="../css/holiday.css">
     <title>О программе</title>
 </head>
 
