--- a/OpenCase/RUS/cases.html
+++ b/OpenCase/RUS/cases.html
@@ -7,7 +7,8 @@
 <link rel="stylesheet" type="text/css" href="../css/fonts.css">
 <link rel="stylesheet" type="text/css" href="../css/animate.css">
 <link rel="stylesheet" href="../css/lobibox.min.css"/>
-
+<link rel="stylesheet" href="../css/holiday.css">
+    
 <script src="../scripts/build/libs.js"></script>
 <script src="../scripts/main.js"></script>
 <script src="../scripts/settings.js"></script>
