--- a/OpenCase/RUS/market.html
+++ b/OpenCase/RUS/market.html
@@ -12,7 +12,8 @@
 <link rel="stylesheet" type="text/css" href="../css/jquery-ui.min.css">
 <link rel="stylesheet" type="text/css" href="../css/marketplace.css">
 <link rel="stylesheet" type="text/css" href="../css/buttons.css">
-
+<link rel="stylesheet" href="../css/holiday.css">
+    
 <!-- Скрипты -->
 <script src="../scripts/build/libs.js"></script>
 <script src="../scripts/main.js"></script>
