--- a/OpenCase/RUS/profile.html
+++ b/OpenCase/RUS/profile.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" type="text/css" href="../css/inventory-portable.css">
     <link rel="stylesheet" type="text/css" href="../css/profile.css">
     <link rel="stylesheet" href="../css/lobibox.min.css" />
+    <link rel="stylesheet" href="../css/holiday.css">
+    
     <script src="../scripts/build/libs.js"></script>
     <script src="../scripts/main.js"></script>
     <script src="../scripts/fb-inventory.js"></script>
