--- a/OpenCase/RUS/apps.html
+++ b/OpenCase/RUS/apps.html
@@ -1,4 +1,4 @@
-﻿<html>
+<html>
 	<head>
 		<title>Другие приложения</title>
 		<script src="../scripts/jquery.min.js"></script>
@@ -14,6 +14,7 @@
 
 		<link rel="stylesheet" type="text/css" href="../css/fonts.css" />
 		<link rel="stylesheet" type="text/css" href="../css/main.css" />
+        <link rel="stylesheet" href="../css/holiday.css">
 	</head>
 	<style>
 		body {
