--- a/OpenCase/RUS/chat.html
+++ b/OpenCase/RUS/chat.html
@@ -13,10 +13,10 @@
     <link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="../css/lobibox.min.css"/>
     <link rel="stylesheet" href="../css/navigationMenu.css">
-    <link rel="stylesheet" href="../css/winter.css">
+    <link rel="stylesheet" href="../css/holiday.css">
     
     <script src="../scripts/build/libs.js"></script>
-    <script src="../scripts/winter.js"></script>
+    <script src="../scripts/holiday.js"></script>
     <script src="../scripts/main.js"></script>
     <script src="../scripts/navigationMenu.js"></script>
     <script src="../scripts/profile.js"></script>
