--- a/OpenCase/RUS/faq.html
+++ b/OpenCase/RUS/faq.html
@@ -5,7 +5,8 @@
         <meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="../css/fonts.css" />
 		<link rel="stylesheet" type="text/css" href="../css/main.css" />
-
+        <link rel="stylesheet" href="../css/holiday.css">
+        
 		<script src="../scripts/jquery.min.js"></script>
 		<script src="../scripts/jquery.cookie.js"></script>
 		<script src="../scripts/main.js"></script>
