--- a/OpenCase/RUS/open.html
+++ b/OpenCase/RUS/open.html
@@ -17,6 +17,7 @@
 <link rel="stylesheet" type="text/css" href="../css/rarity.css">
 <link rel="stylesheet" type="text/css" href="../css/fonts.css">
 <link rel="stylesheet" type="text/css" href="../css/buttons.css">
+<link rel="stylesheet" href="../css/holiday.css">
 </head>
 <body data-localization="openCase" data-inventory="no-load">
 
