--- a/OpenCase/RUS/rulet.html
+++ b/OpenCase/RUS/rulet.html
@@ -10,7 +10,8 @@
 <link rel="stylesheet" type="text/css" href="../css/fonts.css">
 <link rel="stylesheet" type="text/css" href="../css/loading.css">
 <link rel="stylesheet" type="text/css" href="../css/animate.css">
-
+<link rel="stylesheet" href="../css/holiday.css">
+    
 <!-- Скрипты -->
 <script src="../scripts/build/libs.js"></script>
 <script src="../scripts/main.js"></script>
