--- a/OpenCase/RUS/cases.html
+++ b/OpenCase/RUS/cases.html
@@ -24,7 +24,7 @@
 </head>
 <body data-localization="cases" data-inventory="no-load">
 	<div class="site-overlay"></div>
-	<div id="container">
+	<div id="container" class="sosulki" style="background-position: 0 39px;">
 <div class="navigationBar" data-menu-EN="Open Cases" data-menu-RU="Открыть кейсы"></div>
 
 <div class="popup" id="special-popup">
