--- a/OpenCase_Beta/RUS/coinflip.html
+++ b/OpenCase_Beta/RUS/coinflip.html
@@ -14,6 +14,7 @@
 <script src="../scripts/build/libs.js"></script>
 <script src="../scripts/main.js"></script>
 <script src="../scripts/settings.js"></script>
+<script src="../scripts/weapons.js"></script>
 <script src="../scripts/skinNames.js"></script>
 <script src="../scripts/cases2.js"></script>
 <script src="../scripts/quality.js"></script>
