--- a/OpenCase_Beta/RUS/double-Online.html
+++ b/OpenCase_Beta/RUS/double-Online.html
@@ -18,6 +18,7 @@
 <script src="../scripts/main.js"></script>
 <script src="../scripts/settings.js"></script>
 <script src="../scripts/cases2.js"></script>
+<script src="../scripts/weapons.js"></script>
 <script src="../scripts/skinNames.js"></script>
 <script src="../scripts/quality.js"></script>
 <script src="../scripts/prices.js"></script>
