--- a/OpenCase_Beta/RUS/market.html
+++ b/OpenCase_Beta/RUS/market.html
@@ -18,6 +18,7 @@
 <script src="../scripts/main.js"></script>
 <script src="../scripts/settings.js"></script>
 <script src="../scripts/cases2.js"></script>
+<script src="../scripts/weapons.js"></script>
 <script src="../scripts/skinNames.js"></script>
 <script src="../scripts/quality.js"></script>
 <script src="../scripts/prices.js"></script>
@@ -56,7 +57,7 @@
 		<img src="" id="weaponImg">
 		<div class='buy-animation'></div>
 		<table id="weaponInfoTable">
-		<tr><td>Цена</td><td id="weaponPrice"></td></tr>
+		<tr><td>Цена</td><td id="weaponPrice" class="currency dollar"></td></tr>
 		<tr><td>Качество</td><td id="weaponQuality"></td></tr>
 		</table>
 		<span id='buy-text'>Купить:</span>
